update travis-ci to use rethinkdb

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,23 @@ rvm:
  - "2.2.2"
 
 # Make sure we startup the database
-services:
-  - mongodb
+#services:
+#  - mongodb
 
 # Sometimes mongodb takes a bit to start accepting connections
 # so let's take a little nap.
-before_script:
-  - sleep 15
+#before_script:
+#  - sleep 15
+
+# Install and start RethinkDB
+before_install:  
+  - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
+  - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
+  - sudo apt-get update -q
+  - sudo apt-get -y --force-yes install rethinkdb
+
+before_script:  
+    - rethinkdb --daemon
 
 # We're using rspec instead of default rake
 script: bundle exec rspec spec
